--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>OV REALTY CORP Mockup Website</title>
+    <title>Urban Utopia Realty</title>
     <link rel="stylesheet" href="css/bootstrap.min.css" />
     <link rel="stylesheet" href="css/styles.css" />
+    <link rel="icon" type="image/png" href="images/favicon.png" />
     <script defer src="js/bootstrap.bundle.min.js"></script>
   </head>
 
@@ -64,6 +65,25 @@
     </div>
 
     <section>
+      <div class="section-container">
+        <div class="first-container-lg">
+          <div class="first-image-container">
+            <img src="images/building.jpg" alt="" />
+          </div>
+          <div class="first-text-container">
+            <h1>Finally, your version of Utopia.</h1>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus
+              finibus maximus fringilla. Quisque molestie massa eu venenatis
+              vestibulum. Etiam diam lectus, accumsan at pretium in,
+              sollicitudin maximus urna. Vestibulum porta ante dolor. Curabitur
+              sollicitudin ullamcorper elementum. Aliquam neque quam, maximus
+              eget ultrices aliquet, ornare et mi.
+            </p>
+            <button>Contact Us</button>
+          </div>
+        </div>
+      </div>
       <div class="section-container">
         <div class="section-header">
           <div class="section-header-part">
@@ -185,7 +205,7 @@
     <section>
       <div class="cta-container cta-2">
         <div class="cta-details">
-          <h1>Your dream is within reach with OV Realty Corp.</h1>
+          <h1>Live who you are, live wherever you want</h1>
           <p>
             Lorem ipsum dolor sit amet consectetur. Imperdiet duis purus sit sit
             nisl feugiat volutpat auctor. Nunc porttitor ut mauris vel ultrices
@@ -203,7 +223,9 @@
     <section>
       <div class="section-container">
         <div class="section-header">
-          <div class="section-header-part"><h3>OUR SERVICES</h3></div>
+          <div class="section-header-part">
+            <h3>WHAT WE DO FOR OUR CUSTOMERS</h3>
+          </div>
           <div class="section-header-part">
             <p>
               Lorem ipsum dolor sit amet consectetur. Id mi nibh velit a viverra
@@ -214,48 +236,124 @@
             </p>
           </div>
         </div>
-      </div>
-      <div class="services-container">
-        <div class="services-container-sm">
-          <div class="icon-container">
-            <img src="images/management.png" alt="Property Management" />
+        <div class="services-container">
+          <div class="services-container-50">
+            <div class="service-container-sm">
+              <h4>Buy Properties</h4>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc
+                dignissim neque ac nisl imperdiet, eu aliquam augue interdum.
+                Donec vitae pretium tellus. Nunc auctor ac ante sit amet
+                ultrices. Donec euismod velit ut elit tristique, eget tempus
+                enim consequat.
+              </p>
+            </div>
+            <div class="service-container-sm">
+              <h4>Rent</h4>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc
+                dignissim neque ac nisl imperdiet, eu aliquam augue interdum.
+                Donec vitae pretium tellus. Nunc auctor ac ante sit amet
+                ultrices. Donec euismod velit ut elit tristique, eget tempus
+                enim consequat.
+              </p>
+            </div>
+            <div class="service-container-sm">
+              <h4>Sell your Property</h4>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc
+                dignissim neque ac nisl imperdiet, eu aliquam augue interdum.
+                Donec vitae pretium tellus. Nunc auctor ac ante sit amet
+                ultrices. Donec euismod velit ut elit tristique, eget tempus
+                enim consequat.
+              </p>
+            </div>
           </div>
-          <div class="service-details">
-            <div class="service-title">Property Management</div>
-            <div class="service-description">
-              Our comprehensive property management services encompass rent
-              collection, maintenance coordination, tenant relation, financial
-              reporting, and legal compliance, allowing you to maximize
-              profitability and minimize headaches.
+          <div class="services-container-img">
+            <img src="images/services-1.jpg" alt="" />
+          </div>
+        </div>
+        <div class="section-header">
+          <div class="section-header-part">
+            <h3>TESTIMONIALS</h3>
+          </div>
+          <div class="section-header-part">
+            <p>
+              Lorem ipsum dolor sit amet consectetur. Id mi nibh velit a viverra
+              maecenas convallis diam lacus. In pharetra aliquet cursus massa
+              vitae. Sociis pellentesque pellentesque tellus tincidunt ornare
+              vulputate quam lectus. Volutpat pellentesque nullam feugiat et
+              enim.
+            </p>
+          </div>
+        </div>
+        <div class="testimonial-container">
+          <div class="testimonial1">
+            <div class="testimonial-name">
+              <h5>Jess & Ian</h5>
+              <p>
+                "Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                Vivamus eu malesuada quam. Maecenas vitae nulla dui. Aliquam
+                quis leo sodales quam fringilla imperdiet. Cras massa urna,
+                imperdiet in mi a, feugiat maximus leo. Suspendisse congue magna
+                sit amet nisl fermentum, a rutrum ante accumsan. In gravida nunc
+                ut eros porta ullamcorper."
+              </p>
+            </div>
+          </div>
+          <div class="testimonial2">
+            <div class="testimonial3">
+              <div class="testimonial-name">
+                <h5>Christian</h5>
+                <p>
+                  "Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                  Donec varius at eros quis efficitur. Vestibulum sit amet risus
+                  pulvinar, aliquam urna ut, aliquam libero."
+                </p>
+              </div>
+            </div>
+            <div class="testimonial4">
+              <div class="testimonial-name">
+                <h5>Olivia</h5>
+                <p>
+                  "Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                  Donec varius at eros quis efficitur. Vestibulum sit amet risus
+                  pulvinar, aliquam urna ut, aliquam libero."
+                </p>
+              </div>
             </div>
           </div>
         </div>
-        <div class="services-container-sm">
-          <div class="icon-container">
-            <img src="images/longterm.png" alt="Long Term" />
+        <div class="section-header">
+          <div class="section-header-part">
+            <h3>LET THE NUMBERS SPEAK</h3>
           </div>
-          <div class="service-details">
-            <div class="service-title">Long Term Leasing</div>
-            <div class="service-description">
-              From property marketing and tenant screening to lease preparation
-              and ongoing property, we handle all aspects of the leasing process
-              with professionalism and attention to detail.
-            </div>
+          <div class="section-header-part">
+            <p>
+              Lorem ipsum dolor sit amet consectetur. Id mi nibh velit a viverra
+              maecenas convallis diam lacus. In pharetra aliquet cursus massa
+              vitae. Sociis pellentesque pellentesque tellus tincidunt ornare
+              vulputate quam lectus. Volutpat pellentesque nullam feugiat et
+              enim.
+            </p>
           </div>
         </div>
-        <div class="services-container-sm">
-          <div class="icon-container">
-            <img src="images/shortterm.png" alt="Property Management" />
+        <div class="statistics-container">
+          <div id="stat1">
+            <p>Clients</p>
+            <p class="stat-number">139</p>
           </div>
-          <div class="service-details">
-            <div class="service-title">Short Term Leasing</div>
-            <div class="service-description">
-              We specialize in short term leasing design solutions to meet the
-              dynamic needs of our clients. With a minimum lease duration of one
-              month and a maximum of five months, our short term leasing options
-              offer flexibility and convenience for both property owners and
-              tenants alike.
-            </div>
+          <div id="stat2">
+            <p>Real Estate Agents</p>
+            <p class="stat-number">67</p>
+          </div>
+          <div id="stat3">
+            <p>Sold Properties</p>
+            <p class="stat-number">244</p>
+          </div>
+          <div id="stat4">
+            <p>Satifaction</p>
+            <p class="stat-number">100%</p>
           </div>
         </div>
       </div>
@@ -264,7 +362,7 @@
     <section>
       <div class="cta-container cta-1">
         <div class="cta-details">
-          <h1>Your dream is within reach with OV Realty Corp.</h1>
+          <h1>Your dream is within reach with Urban Utopia Realty.</h1>
           <p>
             Lorem ipsum dolor sit amet consectetur. Imperdiet duis purus sit sit
             nisl feugiat volutpat auctor. Nunc porttitor ut mauris vel ultrices
@@ -326,7 +424,7 @@
             <h6>Sell your Property</h6>
             <div class="nav-content">
               <ul>
-                <li><a href="#">Sell with OV Realty Corp</a></li>
+                <li><a href="#">Sell with Urban Utopia Realty</a></li>
                 <li><a href="#">Sell Traditionally</a></li>
                 <li><a href="#">FSBO</a></li>
                 <li><a href="#">See More</a></li>
@@ -339,9 +437,13 @@
     <footer>
       <div class="footer-section">
         <div class="logo">
-          <img class="img-logo" src="images/logo.jpg" alt="Logo" />
-          <p class="item-title">OV Realty Corp</p>
-          <p>Your Optimal Value Partner</p>
+          <div class="logo-img-container">
+            <img class="img-logo" src="images/logo.png" alt="Logo" />
+          </div>
+          <div class="logo-text-container">
+            <p class="item-title">Urban Utopia Realty</p>
+            <p>We find your paradise</p>
+          </div>
         </div>
         <div class="footer-item">
           <div class="footer-item-sm">
@@ -370,7 +472,7 @@
                 <tr>
                   <td><img class="img-svg" src="svg/facebook.svg" alt="" /></td>
                   <td>
-                    <a href="#">OV Realty Corp</a>
+                    <a href="#">Urban Utopia Realty</a>
                   </td>
                 </tr>
                 <tr>
@@ -378,59 +480,30 @@
                     <img class="img-svg" src="svg/instagram.svg" alt="" />
                   </td>
                   <td>
-                    <a href="#">@ovrealtycorp</a>
-                  </td>
-                </tr>
-                <tr>
-                  <td><img class="img-svg" src="svg/tiktok.svg" alt="" /></td>
-                  <td>
-                    <a href="#">@ovrealtycorp</a>
+                    <a href="#">@urbanutopiarealty</a>
                   </td>
                 </tr>
                 <tr>
                   <td><img class="img-svg" src="svg/youtube.svg" alt="" /></td>
                   <td>
-                    <a href="#">@ovrealtycorp</a>
+                    <a href="#">@urbanutopiarealty</a>
                   </td>
                 </tr>
                 <tr>
                   <td><img class="img-svg" src="svg/phone.svg" alt="" /></td>
                   <td>
-                    <a href="#">+63 956 216 1407</a>
+                    <a href="#">+63 912 345 6789</a>
                   </td>
                 </tr>
                 <tr>
                   <td><img class="img-svg" src="svg/email.svg" alt="" /></td>
                   <td>
-                    <a href="#">info@ovrealty.ph</a>
+                    <a href="#">urbanutopiarealty@info.com</a>
                   </td>
                 </tr>
               </tbody>
             </table>
           </div>
-        </div>
-        <div class="newsletter">
-          <p class="item-title">Subscribe to our newsletter</p>
-          <div class="input-group">
-            <input
-              type="text"
-              class="form-control"
-              placeholder="Your email address"
-              aria-label="Your email address"
-              aria-describedby="button-addon2"
-            />
-            <button
-              class="btn btn-outline-secondary"
-              type="button"
-              id="button-addon2"
-            >
-              Subscribe
-            </button>
-          </div>
-          <p>
-            Lorem ipsum dolor sit amet consectetur. Id mi nibh velit a viverra
-            maecenas convallis diam lacus.
-          </p>
         </div>
       </div>
     </footer>
